[package]
name = "rust-caffeine"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["ico"] }
muda = "0.17.1"
tao = "0.35.0"
tray-icon = "0.21.3"
windows = { version = "0.62.2", features = ["Win32_System_Power", "Win32_System_RemoteDesktop", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi"] }

[build-dependencies]
winres = "0.1.12"
